--- a/Class Presentation.qmd
+++ b/Class Presentation.qmd
@@ -24,6 +24,9 @@ library(ggplot2)
 library(usmap)
 library(scales)
 library(tinytable)
+library(maps)
+library(gt)
+library(RColorBrewer)
 ```
 
 ```{r}
@@ -66,13 +69,105 @@ statespending <- geo_spend |>
   group_by(state) |>
   filter(state != "AS", state != "GU", state != "MP", state != "DC", state != "PR", state != "VI" ,state != "") |>
   summarize(Total = sum(Spend_USD)/1000000)
+```
 
-tt(statespending,
-   caption = "Money Spent on Political Advertisement Per State")
-
+## Spending Heat Map
+```{r echo = FALSE}
 plot_usmap(data = statespending, values = "Total", regions = "states") +
   scale_fill_continuous( low = "light yellow", high = "dark red", name = "Spending (in millions)") +
-  theme(legend.position = "right") +
-  labs(title = "Heat Map of Political Ad Spending per State in the U.S.")
+  theme(legend.position = "right", plot.title = element_text(size = 20, face = "bold")) +
+  labs(title = "Heat Map of Political Ad Spending per State")
 ```
+
+
+```{r}
+voterturnout2020 <- read.csv("voter_turnout.csv") |>
+    group_by(State) |>
+  rename(state = State) |>
+  rename("Voter Turnout Rate" = Share.of.Pop..18...24)
+
+youngvoters2020 <- voterturnout2020 |>
+  select(`Voter Turnout Rate`) |>
+  filter(`Voter Turnout Rate` != "NSD", `Voter Turnout Rate` != 0)
+
+youngvoters2020$`Voter Turnout Rate` <- as.numeric(youngvoters2020$`Voter Turnout Rate`)
+
+youngvoters2020$`Voter Turnout Rate` <- youngvoters2020$`Voter Turnout Rate` * 100
+
+```
+
+## Voter Turnout 2020 Heat Map
+```{r echo = FALSE}
+plot_usmap(data = youngvoters2020, values = "Voter Turnout Rate", regions = "states") +
+  scale_fill_gradient(low = "lightyellow", high = "darkred", name = "Turnout Rate", na.value = "gray90") +
+  labs(title = "Voter Turnout Rate (Ages 18-24) by State in 2020") +
+  theme(plot.title = element_text(size = 18, face = "bold"), legend.background = element_rect(fill = "transparent", color = NA),
+      legend.position = c(0,0.05))
+```
+
+```{r}
+voterturnout2016 <- read.csv("voterturnout2016.csv") |>
+  group_by(state) |>
+  rename("Voter Turnout Rate 2016" = Share.of.Pop.Ages.18...24)
+
+youngvoters2016 <- voterturnout2016 |>
+  select('Voter Turnout Rate 2016') |>
+  filter(`Voter Turnout Rate 2016` != "NSD", `Voter Turnout Rate 2016` != 0)
+
+youngvoters2016$`Voter Turnout Rate 2016` <- as.numeric(youngvoters2016$`Voter Turnout Rate 2016`)
+
+youngvoters2016$`Voter Turnout Rate 2016` <- youngvoters2016$`Voter Turnout Rate 2016` * 100
+```
+
+## Voter Turnout 2016 Heat Map
+```{r}
+plot_usmap(data = youngvoters2016, values = "Voter Turnout Rate 2016", regions = "states") +
+  scale_fill_gradient(low = "lightyellow", high = "darkred", name = "Turnout Rate", na.value = "gray90") +
+  labs(title = "Voter Turnout Rate (Ages 18-24) by State in 2016") +
+  theme(plot.title = element_text(size = 18, face = "bold"),
+    legend.background = element_rect(fill = "transparent", color = NA),
+      legend.position = c(0,0.05))
+```
+
+
+## Top 10 States With Highest Voter Turnout Rate Ages 18 - 24
+```{r echo = FALSE}
+top10youngstates2020 <- youngvoters2020 |>
+  arrange(desc(`Voter Turnout Rate`)) |>
+  head(10) |>
+  rename(State = "state")
+```
+
+```{r}
+tt(top10youngstates2020) |>
+  style_tt(fontsize = 0.72)
+```
+## Top 10 States With Spending On Political Advertisements On Google
+```{r echo = FALSE}
+top10spendingstates <- statespending |>
+  arrange(desc(Total)) |>
+  head(10) |>
+  rename(State = "state")
+  
+tt(top10spendingstates) |>
+  style_tt(fontsize = 0.72)
+```
+
+```{r}
+facebookadlocations <- read.csv("facebookadlocations.csv") |>
+  rename(state = "Location.name") |>
+  rename(Spending = "Amount.spent..USD.") |>
+  filter(state != "American Samoa", state != "Guam", state != "Northern Mariana Islands", state != "Puerto Rico", state != "Unknown", state != "Virgin Islands (U.S.)") |>
+  mutate(Spending = Spending/1000000 )
+```
+
+## Facebook Political Ad Spending
+```{r echo = FALSE}
+plot_usmap(data = facebookadlocations, values = "Spending", regions = "states") +
+  scale_fill_gradient(low = "lightyellow", high = "darkred", name = "Spending (in millions)") +
+  theme(
+    legend.background = element_rect(fill = "transparent", color = NA),
+      legend.position = c(0,0.05))
+```
+
 
